2010-08-12  Teodor Zlatanov  <tzz@lifelogs.com>

	Minor bug fixes for gnus-sync.el.

	* gnus-sync.el (gnus-sync-unload-hook, gnus-sync-install-hooks): Don't
	read the sync on get-new-news.

	* gnus-sync.el (gnus-sync-save): Define `variable' so the compiler is
	quiet.

	* gnus-sync.el (gnus-sync-read): Use `gnus-sync-newsrc-offsets' (fix typo).

2010-07-30  Lawrence Mitchell  <wence@gmx.li>

	Make saving and restoring of hidden threads work with overlays.
	Patch applied by Ted Zlatanov.

	* gnus-sum.el (gnus-hidden-threads-configuration)
	(gnus-restore-hidden-threads-configuration): Update to deal with text
	properties, rather than searching for a magic character.

2010-08-12  Teodor Zlatanov  <tzz@lifelogs.com>

	New gnus-sync.el library for synchronization of marks.

	* gnus-sync.el: New library for synchronization of marks.

	* gnus-util.el (gnus-grep-in-list): Moved from gnus-registry.el and
	renamed from `gnus-registry-grep-in-list'.

	* gnus-registry.el (gnus-registry-follow-group-p): Use `gnus-grep-in-list'.

	* gnus-start.el (gnus-start-draft-setup): Make it interactive.

2010-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-encode): Use utf-8 as a last resort if
	determining charset of text fails.

2010-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-get-new-mail-1): Revert.

	* nnml.el (nnml-active-number): Make sure names of newly created groups
	in nnml-group-alist are encoded.

2010-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-get-new-mail-1): Encode group names possibly
	containing non-ASCII characters in active file for nnml back end.

2010-07-24  David Engster  <dengste@eml.cc>

	* mml-smime.el (mml-smime-epg-verify): Also accept the older
	x-pkcs7-signature MIME type as signature (RFC 2311, C.1).

2010-07-21  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-parse-1): Collect "certfile" attributes in "<#secure>"
	tag (Bug#6654).

2010-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>
